# demo-telegram-bot

./: Cargo.toml
src/: lib.rs  request_template.json
